# cc-statement-extractor

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  config.example.yaml  entity.map.json  pyproject.toml
.github/workflows/: python-app.yml
src/cc_statement_extractor/: __init__.py  main.py
src/cc_statement_extractor/cli/: parser.py
src/cc_statement_extractor/ocr/: service.py
src/cc_statement_extractor/pii/: presidio.py  service.py
src/cc_statement_extractor/pipeline/: orchestrator.py
src/cc_statement_extractor/shared/: config.py  logger.py  pdf.py
tests/cc_statement_extractor/: test_cli.py  test_config.py  test_main.py  test_ocr_service.py  test_orchestrator.py  test_pii_service.py  test_presidio.py  test_presidio_extra.py
