[project]
name = "cc-statement-extractor"
version = "0.1.0"
description = "A tool for extracting and anonymizing credit card statements from PDFs using PaddleOCR and Presidio."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "numpy==2.3.1",
    "opencv-python>=4.13.0.90",
    "paddleocr[doc-parser]==3.4.0",
    "pillow>=12.1.0",
    "presidio-analyzer[gliner]>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pymupdf>=1.26.7",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
cpu = [
    "paddlepaddle==3.3.0",
]
gpu = [
    "paddlepaddle-gpu==3.3.0",
]

[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[[tool.uv.index]]
name = "paddle-gpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu130/"
explicit = true


[tool.uv.sources]
paddlepaddle = { index = "paddle-cpu" }
paddlepaddle-gpu = { index = "paddle-gpu" }

[project.scripts]
cc-statement-extractor = "cc_statement_extractor.main:main"
main = "cc_statement_extractor.main:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pip>=25.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
